modelagem inicial da aplicação