@@ -13,3 +13,11 @@ libraryDependencies ++= Seq(
   cache,
   javaWs
 )
+
+javaOptions in Test ++= Seq(
+  "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9998",
+  "-Xms512M",
+  "-Xmx1536M",
+  "-Xss1M",
+  "-XX:MaxPermSize=384M"
+)
